# autumn-py

./: .coverage  .gitignore  .readthedocs.yaml  CONTRIBUTING.MD  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: lint.yml  publish.yml  tests.yml
autumn/: __init__.py  client.py  customers.py  entities.py  error.py  features.py  http.py  products.py  utils.py
autumn/aio/: __init__.py  client.py  http.py  shed.py  stubs.py
autumn/asgi/: __init__.py  app.py  routes.py
autumn/asgi/routes/: __init__.py  core.py  customers.py  entities.py  products.py
autumn/models/: customers.py  entities.py  env.py  features.py  meta.py  products.py  response.py
autumn/sync/: client.py
autumn/types/: __init__.py  balance.py  customers.py  features.py  meta.py  products.py  response.py
docs/source/: api.rst  asyncio.rst  asyncio_.rst  conf.py  index.rst  models.rst  usage.rst
tests/: conftest.py  test.py  test_kwargs.py  test_sandbox.py  test_utils.py
tests/asgi/: test_routes_core.py
