[project]
name = "autumn-py"
version = "1.2.1"
description = "A Python SDK for Autumn's REST API"
readme = "README.md"
license = "MIT"
keywords = ["autumn", "payments", "stripe"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.urls]
GitHub = "https://github.com/justanotherbyte/autumn"
Documentation = "https://autumn-sdk-unofficial.readthedocs.io"

[project.optional-dependencies]
aio = [
    "aiohttp>=3.12.13",
]
asgi = [
    "aiohttp>=3.12.13",
    "starlette>=0.47.1",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-tabs>=3.4.7",
]
tests = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
dev = [
    "litestar>=2.16.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"