[project]
name = "autumn-py"
description = "A Python SDK for Autumn's REST API"
readme = "README.md"
license = "MIT"
keywords = ["autumn", "payments", "stripe"]
authors = [
    { name = "John Yeo", email = "johnyeocx@gmail.com" },
    { name = "Viswa Marepalli", email = "reachvishm@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.9"
dependencies = ["pydantic>=2.11.7", "requests>=2.32.4"]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/useautumn/autumn-py"
Documentation = "https://autumn-py.readthedocs.io"

[project.optional-dependencies]
aio = ["aiohttp>=3.12.13"]
asgi = ["aiohttp>=3.12.13", "starlette>=0.47.1"]
docs = [
    "furo>=2024.8.6",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-tabs>=3.4.7",
]
tests = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0", "pytest-cov>=6.2.1"]
dev = ["litestar>=2.16.0", "uvicorn>=0.34.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "standard"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autumn/"]

[tool.hatch.version]
path = "autumn/__init__.py"
